--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:dev": "yarn build && nest start --watch",
+    "start:debug": "yarn build && nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "typeorm": "ts-node -r dotenv/config ./node_modules/typeorm/cli.js -d ormconfig.js",
-    "migration:create": "yarn build && yarn typeorm migration:create",
     "migration:run": "yarn build && yarn typeorm migration:run",
     "migration:revert": "yarn build && yarn typeorm migration:revert",
-    "migration:gen": "yarn build && yarn typeorm migration:generate"
+    "migration:generate": "yarn build && yarn typeorm migration:generate"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
