chore: update tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,14 @@
     "module": "commonjs",
     "declaration": true,
     "removeComments": true,
+    "lib": ["ES2021"],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "ES2020",
+    "target": "ES2021",
     "sourceMap": true,
-    "outDir": "./dist",
-    "baseUrl": "./",
+    "outDir": "dist",
+    "baseUrl": ".",
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
