--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^9.0.1",
     "axios": "^1.4.0",
-    "dotenv": "^16.0.3",
     "keycloak-connect": "^21.1.1",
     "nest-keycloak-connect": "^1.9.1",
+    "nestjs-request-context": "^2.1.0",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
